qt: Some UI fixes and improvements (#3500)
* qt: Updated loadStylesheet and added general.css for shared styles

* qt: Customized QRadioButton and QCheckBox

- Introduced new images for QCheckBox and QRadioButton
- Make use of Hover/Pressed/Disabled/Indeterminate states 
- Use customized Checkboxes and Radio-Buttons in CoinControlWidget

* qt: Removed qtreeview_selected image

This looks weird in the dark theme. Will introduce new arrows here.

* qt: Redesigned arrows and their usage

- Added new arrow images
- Make use of Hover/Pressed/Disabled states for QAbstractSpinBox and 
QComboBox
- Use custom arrows in QHeaderView
- Use custom arrows in QTreeWidget branch selectors

* qt: Slightly increased checkboxes and radio buttons

* qt: Move the scrollbars css loading into loadStyleSheet

This way all windows will have the same scrollbars and not only the main 
window.

* qt: Use padding instead of margin for QTreeWidget::branch styles

Use of margin here lead to a 2px vertical line at the left edge cause of 
the background below.

* qt: Use border-image for the scrollbar arrows and adjust the size.

background-image lead to not showing the arrows here because it 
obviously was scaled incorrect with the higher resolution of the image 
files.

* qt: Add missing grey arrows and make use of disabled states of scrollbar arrows

* qt: Adjust dashThemeActive and also use it in BitcoinGUI::createToolBars

* qt: Fixed copyright year in general.css

--- a/src/qt/res/css/dark.css
+++ b/src/qt/res/css/dark.css
@@ -81,18 +81,11 @@ background-color: #555;
 
 /*******************************************************/
 
-QLabel { /* Base Text Size & Color */
+QLabel,
+QCheckBox,
+QRadioButton { /* Base Text Size & Color */
 font-size:12px;
 color: #ccc;
-}
-
-.QCheckBox { /* Checkbox Labels */
-color: #ccc;
-background-color:transparent;
-}
-
-.QCheckBox:hover {
-background-color:transparent;
 }
 
 .QValidatedLineEdit, .QLineEdit { /* Text Entry Fields */
@@ -111,16 +104,6 @@ font-size:12px;
 
 .QValidatedLineEdit:disabled, .QLineEdit:disabled {
 background-color: #3e3e3e;
-}
-
-.QRadioButton {
-color: #aaa;
-background-color:transparent;
-}
-
-.QRadioButton:checked {
-color: #ccc;
-background-color:transparent;
 }
 
 QWidget { /* override text selection background color for all text widgets */
@@ -183,10 +166,6 @@ width:25px;
 border:0px;
 }
 
-QComboBox::down-arrow {
-border-image: url(':/images/arrow_down') 0 0 0 0 stretch stretch;
-}
-
 QComboBox QListView {
 color: #aaa;
 background: #555;
@@ -238,10 +217,6 @@ padding-left:5px;
 padding-top:2px;
 }
 
-QAbstractSpinBox::up-arrow {
-image:url(':/images/arrow_up_small');
-}
-
 QAbstractSpinBox::down-button {
 subcontrol-origin: border;
 subcontrol-position: bottom right;
@@ -254,51 +229,6 @@ border-bottom: 1px solid #1c75bc;
 padding-right:1px;
 padding-left:5px;
 padding-bottom:2px;
-}
-
-QAbstractSpinBox::down-arrow {
-image:url(':/images/arrow_down_small');
-}
-
-QCheckBox {
-spacing: 5px;
-}
-
-QCheckBox::indicator {
-width: 16px;
-height: 16px;
-}
-
-QCheckBox::indicator:unchecked {
-image:url(':/images/unchecked');
-}
-
-QCheckBox::indicator:unchecked:hover {
-image:url(':/images/unchecked');
-}
-
-QCheckBox::indicator:unchecked:pressed {
-image:url(':/images/checked');
-}
-
-QCheckBox::indicator:checked {
-image:url(':/images/checked');
-}
-
-QCheckBox::indicator:checked:hover {
-image:url(':/images/checked');
-}
-
-QCheckBox::indicator:checked:pressed {
-image:url(':/images/unchecked');
-}
-
-QCheckBox::indicator:indeterminate:hover {
-image:url(':/images/unchecked');
-}
-
-QCheckBox::indicator:indeterminate:pressed {
-image:url(':/images/checked');
 }
 
 /*******************************************************/
@@ -653,15 +583,6 @@ QDialog#OptionsDialog QLabel#label_3 { /* Translations Missing? Label */
 qproperty-alignment: 'AlignVCenter | AlignCenter';
 color: #aaa;
 padding-bottom:8px;
-}
-
-QDialog#OptionsDialog QCheckBox {
-min-height:20px;
-}
-
-QDialog#OptionsDialog QCheckBox#displayAddresses {
-min-height:33px;
-
 }
 
 QDialog#OptionsDialog QGroupBox {
@@ -1141,9 +1062,6 @@ QDialog#SendCoinsDialog .QFrame#frameCoinControl .QWidget#widgetCoinControl > .Q
 padding:2px;
 }
 
-QDialog#SendCoinsDialog .QFrame#frameCoinControl .QCheckBox#checkBoxCoinControlChange { /* Custom Change Label */
-}
-
 QDialog#SendCoinsDialog .QFrame#frameCoinControl .QValidatedLineEdit#lineEditCoinControlChange { /* Custom Change Address */
 }
 
@@ -1198,15 +1116,6 @@ color: #333;
 
 QDialog#SendCoinsDialog .QPushButton#addButton:pressed {
 border:1px solid #9e9e9e;
-}
-
-QDialog#SendCoinsDialog .QCheckBox#checkUsePrivateSend { /* PrivateSend Checkbox */
-color: #ccc;
-font-weight:bold;
-border-radius:5px;
-padding-top:20px;
-padding-bottom:18px;
-margin-right:20px;
 }
 
 /* This QLabel uses name = "label" which conflicts with Address Book -> New Address */
@@ -1398,7 +1307,6 @@ color: #ccc;
 }
 
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::branch:selected { /* Coin Control Branch Icon */
-background-image: url(':/images/qtreeview_selected');
 background-repeat:no-repeat;
 background-position:center;
 background-color: #666;
@@ -1406,7 +1314,6 @@ color: #ccc;
 }
 
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::branch:checked { /* Coin Control Branch Icon */
-background-image: url(':/images/qtreeview_selected');
 background-repeat:no-repeat;
 background-position:center;
 background-color: #333;
@@ -1580,7 +1487,7 @@ QLabel#transactionSumLabel { /* Example of setObjectName for widgets without nam
 color: #ccc;
 font-weight:bold;
 }
- 
+
 QLabel#transactionSum { /* Example of setObjectName for widgets without name */
 color: #ccc;
 }
